--- a/hw0-qiwenz/pom.xml
+++ b/hw0-qiwenz/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.11791.f13.hw0</groupId>
 	<artifactId>hw0-qiwenz</artifactId>
-	<version>0.0.5-SNAPSHOT</version>
+	<version>0.0.5</version>
 	<dependencies>
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
