--- a/hw0-qiwenz/pom.xml
+++ b/hw0-qiwenz/pom.xml
@@ -11,8 +11,8 @@
 		</dependency>
 	</dependencies>
 	<scm>
-		<connection>scm:git:git@github.com:qiwenz/hw0-qiwenz.git</connection>
-		<developerConnection>scm:git:git@github.com:qiwenz/hw0-qiwenz.git</developerConnection>
+		<connection>scm:git:https://github.com/qiwenz/hw0-qiwenz.git</connection>
+		<developerConnection>scm:git:https://github.com/qiwenz/hw0-qiwenz.git</developerConnection>
 	</scm>
 	<repositories>
 		<repository>
