--- a/hw0-qiwenz/pom.xml
+++ b/hw0-qiwenz/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.11791.f13.hw0</groupId>
 	<artifactId>hw0-qiwenz</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.5-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
@@ -11,8 +11,8 @@
 		</dependency>
 	</dependencies>
 	<scm>
-		<connection>scm:git:https://github.com/qiwenz/hw0-qiwenz.git</connection>
-		<developerConnection>scm:git:https://github.com/qiwenz/hw0-qiwenz.git</developerConnection>
+		<connection>scm:git:git@github.com:qiwenz/hw0-qiwenz.git</connection>
+		<developerConnection>scm:git:git@github.com:qiwenz/hw0-qiwenz.git</developerConnection>
 	</scm>
 	<repositories>
 		<repository>
